Fixed node shifting on click to the direction of the last movement by resetting the pos1, pos2 variables; Created direction marker on connection lines

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,40 +24,28 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: hotpink;
         height: 60px;
         width: 60px;
         cursor: pointer;
         user-select: none;
       }
+     
+    .unselected-node{
+      background-color: hotpink;
+    }
 
+    .selected-node {
+      background-color: hotpink;
+      border-width: 4px;
+      border-color: oklch(90.1% 0.058 230.902);
+    }
       .position {
         top: 45%;
         left: 45%;
       }
 
 
-      .url-node {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: blueviolet;
-        height: 120px;
-        width: 120px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-
-      .hub-node {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: red;
-        height: 60px;
-        width: 60px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
+      
 
       .draggable {
         position: absolute;
@@ -85,6 +73,11 @@
   .default-line {
     stroke-width: 2;
     stroke-color: oklch(90.1% 0.058 230.902)
+  }
+
+  .line-arrow {
+    stroke-width: 1;
+    
   }
 
   .selected-line {
